--- a/laravel/Dockerfile
+++ b/laravel/Dockerfile
@@ -1,15 +1,16 @@
 # syntax=docker/dockerfile:1.6
-FROM node:22-bookworm-slim
+FROM php:8.3-cli-bookworm
 
-# Optional: useful tools
-RUN apt-get update && apt-get install -y --no-install-recommends \    bash ca-certificates tini \    && rm -rf /var/lib/apt/lists/*
+# System deps
+RUN apt-get update && apt-get install -y --no-install-recommends \    git unzip libzip-dev libsodium-dev bash ca-certificates \    && docker-php-ext-install zip sodium \    && rm -rf /var/lib/apt/lists/*
 
-# Ensure CA store & tini
-ENV NODE_ENV=production
-ENTRYPOINT ["/usr/bin/tini","--"]
+# Composer
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Workdir
-WORKDIR /work
+# Working directory (mount your Laravel app here via docker-compose)
+WORKDIR /var/www/html
 
-# Keep container alive by default; we will run commands with `docker compose run --rm app <cmd>`
+ENV COMPOSER_ALLOW_SUPERUSER=1 \    PATH="/var/www/html/vendor/bin:${PATH}"
+
+# Default command: keep container running so you can exec into it
 CMD ["bash","-lc","tail -f /dev/null"]
