--- a/laravel/package.json
+++ b/laravel/package.json
@@ -1,33 +1,17 @@
 {
-  "name": "otto-crypt-js",
-  "version": "0.1.0",
-  "description": "OTTO Crypt JS: AES-256-GCM + HKDF-SIV style streaming AEAD compatible with Laravel OTTO package; includes X25519 and Argon2id via libsodium.",
-  "license": "MIT",
-  "author": "Ivan Doe",
-  "type": "commonjs",
-  "main": "src/index.js",
-  "bin": {
-    "otto-crypt": "bin/otto-crypt.js"
-  },
-  "scripts": {
-    "test": "node -e \"console.log('No tests yet')\""
-  },
-  "dependencies": {
-    "libsodium-wrappers": "^0.7.13"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "encryption",
-    "aes-gcm",
-    "hkdf",
-    "siv",
-    "x25519",
-    "argon2id",
-    "aead",
-    "streaming",
-    "laravel",
-    "interop"
-  ]
+    "$schema": "https://json.schemastore.org/package.json",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite"
+    },
+    "devDependencies": {
+        "@tailwindcss/vite": "^4.0.0",
+        "axios": "^1.11.0",
+        "concurrently": "^9.0.1",
+        "laravel-vite-plugin": "^2.0.0",
+        "tailwindcss": "^4.0.0",
+        "vite": "^7.0.7"
+    }
 }
